--- a/app/javascript/src/tailwind/components/media_item.css
+++ b/app/javascript/src/tailwind/components/media_item.css
@@ -8,6 +8,6 @@
   }
 
   .media-text {
-    @apply flex-col;
+    @apply flex-col w-full;
   }
 }
