--- a/app/javascript/src/tailwind/rich_content.css
+++ b/app/javascript/src/tailwind/rich_content.css
@@ -1,6 +1,8 @@
 /* Based on default styling applied to
    rich text in Quill's editor. */
 .rich-content {
+  @apply break-words;
+
   h1 { font-size: 2em; }
   h2 { font-size: 1.5em; }
   h3 { font-size: 1.17em; }
